# cegsr

./: README.md  bash.exe.stackdump  pyproject.toml  start-claude.ps1  vpn.md  方向A.md
.claude/: settings.local.json
cegsr/: .env.example  .gitignore  README.md  requirements.txt
cegsr/configs/: base.yaml  base_demo.yaml
cegsr/docs/: data_schema.md  dual_4090_workflow.md  experience_graph.md  experiment_guide.md  experiment_log_2026-03-30.md  reproduction.md  selective_repair.md
cegsr/examples/: demo_run.sh  sample_config.yaml
cegsr/scripts/: run_ablation.py  run_repair.py
cegsr/tests/: test_config_loader.py  test_credit.py  test_graph.py  test_launchers.py  test_modeling.py  test_tasks.py
configs/: base.yaml
configs/ablations/: no_selective_repair.yaml
configs/datasets/: reasoning_mix_train.yaml  sample_qa.yaml
configs/pipelines/: collect.yaml  repair.yaml
configs/profiles/: dual_4090_vllm.yaml  dual_4090_vllm_paper.yaml  paper_benchmark.yaml  single_vgpu32.yaml  single_vgpu32_v2.yaml  sirius_sft_baseline.yaml
configs/training/: dpo.yaml  lora.yaml
docs/: architecture.md  credit_assignment.md  experiment_guide.md  experiment_log_2026-03-30.md  pipeline.md
outputs/_launcher_check/: prepare_data.sh  run_pipeline.sh
outputs/ablations/: ablation_table.csv  ablation_table.json
outputs/ablations_demo_after_patch_v2/: ablation_table.json
outputs/demo/: _tmp_raw.jsonl  (+1 more)
scripts/: build_graph.py  prepare_data.py  run_ablation.py  run_collect.py  run_eval.py  run_iterative.py  run_pipeline.py  train_role_sft.py
tests/: test_data_builders.py
(+944 files in other folders)
